--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Rock Paper Scissors Part 2 </title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
 </head>
 
@@ -27,7 +27,7 @@
 
   <div id="game">
     <h1>You Chose: <span id="userText"></span></h1>
-    <h1> The Computer Chose: <span id="computerText"></span></h1>
+    <h1> Here Comes A: <span id="computerText"></span></h1>
     <h1>Wins: <span id="winsText"></span></h1>
     <h1>Losses: <span id="lossesText"></span></h1>
     <h1>Ties: <span id="tiesText"></span></h1>
