--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1> Here Comes A: <span id="computerText"></span></h1>
     <h1>Wins: <span id="winsText"></span></h1>
     <h1>Losses: <span id="lossesText"></span></h1>
-    <h1>Ties: <span id="tiesText"></span></h1>
+    <h1>Friends!: <span id="tiesText"></span></h1>
   </div>
 
   <script type="text/javascript">
